Fixes output spacing

--- a/public/styles/colour-picker.css
+++ b/public/styles/colour-picker.css
@@ -29,7 +29,7 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .main-area {
